# translate

./: .env.example  .gitignore  .test-pagekey.mjs  .test-restore-wrapper.mjs  .test-sse.mjs  CLAUDE.md  MoR平台选型.html  deepseek-v4-languages.html  dev.sh  pnpm-lock.yaml  stripe-payoneer-and-yungouos.html  tsconfig.json  wxt.config.ts  上架材料.md  产品蓝图V2-商业化.html  产品设计-服务端化与账号体系.md  卡点方案对比.html  待办清单-账号与采购.html  收入预测模型.html  沉浸式翻译插件-用户体验设计.md  测试网站清单.md  测试运行记录.md  海外收款-两方案落地步骤.html  翻译问题记录.md  隐私政策.md
server/: .env.example  CLAUDE.md  deepseek-v4-flash.md  docker-compose.yml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 24a696f06271_translation_cache.py  5b18caa09296_anon_usage.py  674448dc7aa1_events_errorlogs.py  (+11 more)
server/app/: main.py
server/scripts/: create_admin.py  gen_session_keypair.py  smoke_translate.py
server/tests/: conftest.py  test_admin_auth.py  test_admin_credits.py  test_admin_data.py  test_admin_keys.py  test_auth_endpoints.py  test_auth_service.py  test_billing_webhook.py  test_block_splitter.py  test_cache.py  test_cors.py  test_credit_repo.py  test_creem_sig.py  test_crypto.py  test_daily_usage.py  test_deepseek.py  test_email_resend.py  test_failover.py  test_golden_vectors.py  test_hashing.py  test_health.py  test_markers.py  test_pricing.py  test_quota.py  test_ratelimit.py  test_recharge.py  test_redeem_repo.py  test_redeem_verify.py  test_security.py  test_telemetry_endpoints.py  test_tier.py  test_tier_repo.py  test_tokens.py  test_translate_endpoint.py  test_translator.py  test_usage_endpoint.py  test_yungouos.py
(+157 files in other folders)
