[project]
name = "immersive-translate-server"
version = "0.1.0"
description = "沉浸式翻译后端：翻译流水线服务端化 + 账号 + 限流 + 打点"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
