[project]
name = "immersive-translate-server"
version = "0.1.0"
description = "沉浸式翻译后端：翻译流水线服务端化 + 账号 + 限流 + 打点"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.uv]
package = false

# 作者在国内：用清华镜像作默认索引（pypi.org 直连被墙、个人代理不稳）。
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
